--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="score">Score:</div>
+    <div>Pause Game With ESC</div>
     <canvas id="canvas"></canvas>
   </body>
 </html>
